app/src/test/resources/autoexpect/syntax/parse/LexerTest/parseFail/7.txt
error: unterminated comment
  --> test:1:4
1 | foo/*
       ~~
